# GalacticPathFinder

./: .gitignore  404.html  README.md  docker-compose.yml  index.html  objects.inv  start_project.py
.github/: dependabot.yml
.github/workflows/: backend_ci.yml  cd.yml  ci.yml  codeql.yml  container-upload.yml  django.yml  docker_ci.yml  manual_django.yml  node.js.yml  python-package.yml
backend/: .pre-commit-config.yaml  Dockerfile  README.md  api.py  main.py  manage.py  mkdocs.yml  pyproject.toml  requirements.txt
backend/backend/: settings.py
backend/galacticPathFinder/: asgi.py  settings.py  urls.py  wsgi.py
backend/graphtraversal/: apps.py  factory.py  map.py  seriaiser.py  serializers.py  tests.py  urls.py  views.py
backend/graphtraversal/algorithms/: a_star.py  heuristics.py  pathfinder.py  (+3 more)
backend/tests/: test_api.py
docs/: architecture.wsd  index.html  swagger.yaml
docs/architecture_decision_record/: design_pattern.md  django_backend.md  typescript_vite_frontend.md
docs/manuals/: deploying_to_production.md  developer_setup.md  docker.md
fast-api/: main.py  pyproject.toml
fast-api/src/: factory.py  map.py  models.py
fast-api/src/algorithms/: a_star.py  search_utils.py  uninformed_search.py
frontend/: .eslintrc.cjs  .prettierrc.cjs  Dockerfile  colors.css  colors.ts  cypress.config.ts  index.html  nginx.config  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: main.tsx  test.tsx  types.ts
reference/src/: index.html
search/: search_index.json
src/: basic_module.py
tests/: test_basic_module.py
(+85 files in other folders)
